--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,17 @@
   <body>
     <div id="tile-stack-container"><div id="tile-stack"></div><div id="scoreboard"></div></div>
     <div id="tile-board-container"><div id="tile-board"><div id="scores-layer"></div></div></div></div>
+    <div id="game-state-message"></div>
 
     <script type="text/javascript">var exports = {};</script>
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="script.js"></script>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript">
+
+      window.socketIO = true;
+    </script>
   </body>
 </html>
 
