--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mootools/1.6.0/mootools-core.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mootools-more/1.6.0/mootools-more-compressed.js"></script>
-    <title>Game</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>Tile Game</title>
   </head>
   <body>
-    <!--
-    <div id="tile-stack-container"><div id="tile-stack"></div><div id="scoreboard"></div></div>
-    <div id="tile-board-container"><div id="tile-board"><div id="scores-layer"></div></div></div></div>
-    -->
-
-    <script type="text/javascript">var exports = {};</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.10.17/interact.min.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript">
+    let gm = new GameManager();
+    gm.start();
+    </script>
   </body>
 </html>
 
