--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.10.17/interact.min.js"></script>
-    <script type="text/javascript" src="output/script.js"></script>
+    <script type="text/javascript" src="dist/script.js"></script>
     <script type="text/javascript">
     let gm = new tilegame.GameManager();
     gm.start();
