Play with new grids.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script type="text/javascript">
     let gm = new tilegame.GameManager();
     gm.start();
+
+    let ng = new tilegame.NewGrid();
     </script>
   </body>
 </html>
