--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
   </head>
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.10.17/interact.min.js"></script>
-    <script type="text/javascript" src="dist/script.js"></script>
+    <script type="text/javascript" src="dist/main.js"></script>
     <script type="text/javascript">
     let gm = new tilegame.GameManager();
     gm.start();
-
-    let ng = new tilegame.NewGrid();
     </script>
   </body>
 </html>
