--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.10.17/interact.min.js"></script>
     <script type="text/javascript" src="dist/main.js"></script>
     <script type="text/javascript">
-    let gm = new tilegame.GameManager();
-    gm.start();
+    tilegame.startMainMenu();
     </script>
   </body>
 </html>
