--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="apple-touch-icon" href="icon.png" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, user-scalable=no, maximum-scale=1, minimum-scale=1" />
     <title>Tile Game</title>
   </head>
   <body>
