--- a/newgame.html
+++ b/newgame.html
@@ -7,7 +7,7 @@
     <title>Tile Game</title>
   </head>
   <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.10.17/interact.min.js"></script>
+    <script src="node_modules/interactjs/dist/interact.min.js"></script>
     <script type="text/javascript" src="dist/main.js"></script>
     <script type="text/javascript">
     tilegame.start();
