--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Tile Game</title>
   </head>
   <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.10.17/interact.min.js"></script>
+    <script src="interact.1.10.17.min.js"></script>
     <script type="text/javascript" src="dist/main.js"></script>
     <script type="text/javascript">
       tilegame.startMainMenu();
