--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" href="icon.png" />
     <link rel="manifest" href="manifest.json" />
-    <meta name="viewport" content="user-scalable=no, maximum-scale=1, minimum-scale=1" />
+    <meta name="viewport" content="user-scalable=no, maximum-scale=1, minimum-scale=1, viewport-fit=cover" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>Tile Game</title>
   </head>
   <body>
