--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Tile Game</title>
   </head>
   <body>
+    <div class="version" id="version"></div>
     <script src="interact.1.10.17.min.js"></script>
     <script type="text/javascript" src="dist/main.js"></script>
     <script type="text/javascript">
