Update the serviceWorker.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       tilegame.startMainMenu();
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("sw.js");
+        navigator.serviceWorker.update();
       }
     </script>
   </body>
