--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   </head>
   <body>
     <div class="version" id="version"></div>
-    <script src="interact.1.10.17.min.js"></script>
-    <script type="text/javascript" src="dist/main.js"></script>
+    <script type="text/javascript" src="src/main.ts"></script>
     <script type="text/javascript">
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("sw.js");
