--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" href="icon.png" />
     <link rel="manifest" href="manifest.json" />
-    <meta name="viewport" content="user-scalable=no, maximum-scale=1, minimum-scale=1, viewport-fit=cover, width=device-width" />
+    <meta
+      name="viewport"
+      content="user-scalable=no, maximum-scale=1, minimum-scale=1, viewport-fit=cover, width=device-width"
+    />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -21,4 +24,3 @@
     </script>
   </body>
 </html>
-
