--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="robots" content="noindex, follow" />
     <title>Tile Game</title>
   </head>
   <body>
