--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
   </head>
   <body>
     <div class="version" id="version"></div>
-    <script type="text/javascript" src="src/main.ts"></script>
-    <script type="text/javascript">
+    <!--
+    <scr ipt type="text/javascript" src="src/main.ts"></script>
+    <scr ipt type="text/javascript">
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("sw.js");
       }
       tilegame.startMainMenu();
-    </script>
+    </sc ript>
+    -->
+    <script type="module" src="src/main.ts"></script>
   </body>
 </html>
