--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </style>
     <link
       rel="preload"
-      href="style.css"
+      href="style/main.scss"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
       crossorigin="anonymous"
