Update responsive layout for setup menu.

--- a/iframes.html
+++ b/iframes.html
@@ -23,7 +23,7 @@
       }
       .iframes {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         flex-wrap: wrap;
         margin: 10px;
         overflow: hidden;
