--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <g
           clip-path="path('M.11.03h.78c.04 0 .08.04.08.08v.78C.97.93.93.97.89.97H.11C.07.97.03.93.03.89V.11C.03.07.07.03.11.03Z') view-box"
         >
-          <path fill="#d55e00" d="M0 0h1L.833.5H.167Z" />
-          <path fill="#0072b2" d="M1 0v1L.5.833V.5Z" />
-          <path fill="#009e73" d="M1 1H0L.167.5H.5Z" />
-          <path fill="#e69f00" d="M0 1V0l.5.5Z" />
+          <path fill="#e06300" d="M0 0h1L.833.5H.167Z" />
+          <path fill="#0078bb" d="M1 0v1L.5.833V.5Z" />
+          <path fill="#00a679" d="M1 1H0L.167.5H.5Z" />
+          <path fill="#f2a700" d="M0 1V0l.5.5Z" />
         </g>
       </svg>
     </div>
