--- a/iframes.html
+++ b/iframes.html
@@ -19,14 +19,11 @@
         margin: 0;
         padding: 0;
       }
-      iframe {
-      }
       .iframes {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        margin: 10px;
-        overflow: hidden;
+        margin: 10px 10px 100px 10px;
         max-height: 100vh;
         align-content: flex-start;
       }
