--- a/iframes.html
+++ b/iframes.html
@@ -37,17 +37,16 @@
   <body>
     <script type="text/javascript">
       const sizes = [
+        [344, 882],
         [375, 667],
-        [414, 896],
-        [390, 844],
-        [430, 932],
-        [412, 915],
         [360, 740],
+        [390, 844],
         [412, 915],
+        [414, 896],
+        [430, 932],
         [768, 1024],
         [820, 1180],
         [1024, 1366],
-        [344, 882],
       ];
       sizes.sort((a, b) => {
         return a[0] / a[1] - b[0] / b[1];
@@ -74,6 +73,7 @@
           wrap.style.height = `${(SCALE * size[b]) / size[a]}px`;
           wrap.style.maxWidth = `${SCALE}px`;
           wrap.style.maxHeight = `${(SCALE * size[b]) / size[a]}px`;
+          wrap.title = `${size[a]}x${size[b]}`;
           const iframe = document.createElement("iframe");
           iframe.setAttribute("width", `${size[a]}`);
           iframe.setAttribute("height", `${size[b]}`);
