--- a/editor.html
+++ b/editor.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="apple-touch-icon" href="icons/icon.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Tile Game</title>
   </head>
