--- a/iframes.html
+++ b/iframes.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="icon" href="icon.png" />
+    <link rel="icon" href="icons/icon.png" />
     <link rel="manifest" href="manifest.json" />
     <meta
       name="viewport"
