--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="icon" href="icons/icon.png" />
+    <link rel="apple-touch-icon" href="icons/icon-180.png" sizes="180x180" />
     <link rel="manifest" href="manifest.json" />
     <meta
       name="viewport"
