Add OpenGraph images.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,48 @@ https://tessel.vantulder.net/source/
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="robots" content="noindex, follow" />
+    <link rel="canonical" href="https://tessel.vantulder.net/" />
+    <meta property="og:title" content="Tessel – A tile game" />
+    <meta
+      property="og:description"
+      content="A free online tile game. Place tiles with matching colors to make shapes and fill the board."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tessel.vantulder.net/" />
+    <meta
+      property="og:image"
+      content="https://tessel.vantulder.net/social/tessel-1200x630.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
+    <meta
+      property="og:image:alt"
+      content="Screenshots of Tessel – A tile game."
+    />
+    <meta
+      property="og:image"
+      content="https://tessel.vantulder.net/social/tessel-1200x1200.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="1200" />
+    <meta property="og:image:type" content="image/png" />
+    <meta
+      property="og:image:alt"
+      content="Screenshots of Tessel – A tile game."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="tessel.vantulder.net" />
+    <meta property="twitter:url" content="https://tessel.vantulder.net/" />
+    <meta name="twitter:title" content="Tessel – A tile game" />
+    <meta
+      property="twitter:description"
+      content="A free online tile game. Place tiles with matching colors to make shapes and fill the board."
+    />
+    <meta
+      name="twitter:image"
+      content="https://tessel.vantulder.net/social/tessel-1200x630.png"
+    />
     <title>Tessel – A tile game</title>
     <style type="text/css">
       /* minimum css for splash screen */
