Move assets to a single directory.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@ https://tessel.vantulder.net/source/
 -->
 <html>
   <head>
-    <link rel="icon" href="icons/icon.png" />
-    <link rel="apple-touch-icon" href="icons/icon-180.png" sizes="180x180" />
+    <link rel="icon" href="assets/icons/icon.png" />
+    <link
+      rel="apple-touch-icon"
+      href="assets/icons/icon-180.png"
+      sizes="180x180"
+    />
     <link rel="manifest" href="manifest.json" />
     <meta
       name="viewport"
@@ -131,7 +135,7 @@ https://tessel.vantulder.net/source/
     />
     <link
       rel="preload"
-      href="fonts/barlow-latin-400.woff"
+      href="assets/fonts/barlow-latin-400.woff"
       as="font"
       type="font/woff"
       crossorigin="anonymous"
