--- a/index.capacitor.html
+++ b/index.capacitor.html
@@ -84,9 +84,12 @@ https://tessel.vantulder.net/source/
   <body>
     <div id="splash">
       <svg width="100" height="100" viewBox="0 0 1 1">
-        <g
-          clip-path="path('M.11.03h.78c.04 0 .08.04.08.08v.78C.97.93.93.97.89.97H.11C.07.97.03.93.03.89V.11C.03.07.07.03.11.03Z') view-box"
-        >
+        <clipPath id="splashclip">
+          <path
+            d="M.11.03h.78c.04 0 .08.04.08.08v.78C.97.93.93.97.89.97H.11C.07.97.03.93.03.89V.11C.03.07.07.03.11.03Z"
+          />
+        </clipPath>
+        <g clip-path="url(#splashclip)">
           <path fill="#e06300" d="M0 0h1L.833.5H.167Z" />
           <path fill="#0078bb" d="M1 0v1L.5.833V.5Z" />
           <path fill="#00a679" d="M1 1H0L.167.5H.5Z" />
