Cleanup: move files to subdirectories.

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@ https://tessel.vantulder.net/source/
 -->
 <html>
   <head>
+    <link rel="icon" href="../assets/icons/icon.png" />
+    <link
+      rel="apple-touch-icon"
+      href="../assets/icons/icon-180.png"
+      sizes="180x180"
+    />
     <link rel="manifest" href="manifest.json" />
     <meta
       name="viewport"
@@ -16,6 +22,47 @@ https://tessel.vantulder.net/source/
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <link rel="canonical" href="https://tessel.vantulder.net/" />
+    <meta property="og:title" content="Tessel – A tile game" />
+    <meta
+      property="og:description"
+      content="A free online tile game. Place tiles with matching colors to make shapes and fill the board."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tessel.vantulder.net/" />
+    <meta
+      property="og:image"
+      content="https://tessel.vantulder.net/social/tessel-1200x630.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
+    <meta
+      property="og:image:alt"
+      content="Screenshots of Tessel – A tile game."
+    />
+    <meta
+      property="og:image"
+      content="https://tessel.vantulder.net/social/tessel-1200x1200.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="1200" />
+    <meta property="og:image:type" content="image/png" />
+    <meta
+      property="og:image:alt"
+      content="Screenshots of Tessel – A tile game."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="tessel.vantulder.net" />
+    <meta property="twitter:url" content="https://tessel.vantulder.net/" />
+    <meta name="twitter:title" content="Tessel – A tile game" />
+    <meta
+      property="twitter:description"
+      content="A free online tile game. Place tiles with matching colors to make shapes and fill the board."
+    />
+    <meta
+      name="twitter:image"
+      content="https://tessel.vantulder.net/social/tessel-1200x630.png"
+    />
     <title>Tessel – A tile game</title>
     <style type="text/css">
       /* minimum css for splash screen */
@@ -79,7 +126,20 @@ https://tessel.vantulder.net/source/
         color: #071a3d;
       }
     </style>
-    <link rel="stylesheet" href="style/main.scss" crossorigin="anonymous" />
+    <link
+      rel="preload"
+      href="../style/main.scss"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="../assets/fonts/barlow-latin-400.woff"
+      as="font"
+      type="font/woff"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="splash">
@@ -103,6 +163,6 @@ https://tessel.vantulder.net/source/
         <a href="https://tessel.vantulder.net/about/">documentation</a>.
       </p>
     </div>
-    <script type="module" src="src/main.capacitor.ts"></script>
+    <script type="module" src="main.browser.ts"></script>
   </body>
 </html>
