Add UTF-8 encoding to HTML.

--- a/src/index.capacitor.html
+++ b/src/index.capacitor.html
@@ -7,6 +7,7 @@ https://tessel.vantulder.net/source/
 -->
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="manifest" href="manifest.json" />
     <meta
       name="viewport"
