--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@ https://tessel.vantulder.net/source/
 -->
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="icon" href="../assets/icons/icon.png" />
     <link
       rel="apple-touch-icon"
