Update some English texts.

--- a/i18n/settings/en.html
+++ b/i18n/settings/en.html
@@ -1,16 +1,16 @@
 <h3>How to play?</h3>
 <ul>
   <li>
-    Drag a tile from the stack to place it on the board. Click&nbsp;a tile to
-    rotate.
+    Drag a tile from the stack to place it on the board. Click&nbsp;on a tile to
+    rotate it.
   </li>
-  <li>The colors must match with the other tiles.</li>
+  <li>Match the colors with the tiles next to it.</li>
   <li>
-    Make a closed shape of a single color to earn points. The&nbsp;larger the
+    Complete a closed shape of one color to earn points. The&nbsp;bigger the
     shape, the higher the points.
   </li>
 </ul>
-<p>The game ends when you have placed all tiles.</p>
+<p>The game ends when you have placed all your tiles.</p>
 
 <h3>Settings</h3>
 <ul class="options">
@@ -18,30 +18,30 @@
     Light mode, dark&nbsp;mode,<br />or follow your device.
   </li>
   <li data-setting="placeholders">Show placeholder tiles</li>
-  <li data-setting="hints">Show valid tile positions</li>
-  <li data-setting="autorotate">Automatically rotate tiles</li>
+  <li data-setting="hints">Highlight valid positions</li>
+  <li data-setting="autorotate">Auto-rotate tiles</li>
   <li data-setting="snap">Snap tiles into place</li>
 </ul>
 
 <h3>Up for a challenge?</h3>
 <p>
-  Once you’ve played triangles and squares, try some of the other shapes and
-  tiling patterns in a <a data-internal="setup" href="#setup">custom game</a>.
+  Played the triangles and squares? Try some of the other shapes and tiling
+  patterns in a <a data-internal="setup" href="#setup">custom game</a>.
 </p>
 <p>
-  If you want, you can even change the rules: require non-matching colors, or
-  use only tiles with unique colors.
+  Want to mix things up? Change the rules; require that colors should not match,
+  or use only tiles with unique colors.
 </p>
 <p>
-  Note: some combinations may lead to an impossible tilings! The game will warn
-  you if this is the case.
+  Note: some combinations may make it impossible to make a valid tiling! The
+  game will warn you if that happens.
 </p>
 
 <h3>About the game</h3>
 <p>
   Tessel is a game by <a href="https://www.vantulder.net/">Gijs van Tulder</a>.
 </p>
-<p>Like the game or have a suggestion?</p>
+<p>Enjoying the game or have an idea to share?</p>
 <p>
   <a href="mailto:tessel-play@vantulder.eu?subject=Tessel%20feedback"
     >Send me an email</a
@@ -52,9 +52,9 @@
 <h3>Open source</h3>
 <p>
   The <a href="https://tessel.vantulder.net/source/">source code</a> for this
-  game is available under the GPL 3.0 license. View
-  <a href="https://github.com/gvtulder/tessel/">GitHub</a> for issues and pull
-  requests.
+  game is available under the GPL 3.0 license. See the
+  <a href="https://github.com/gvtulder/tessel/">repository on GitHub</a> for
+  issues and pull requests.
 </p>
 
 <p class="version-line">Version VERSION.</p>
