Add language picker to settings.

--- a/i18n/settings/nl.html
+++ b/i18n/settings/nl.html
@@ -14,8 +14,9 @@
 
 <h3>Instellingen</h3>
 <ul class="options">
+  <li data-setting="language">Taal</li>
   <li data-setting="color-scheme">
-    Lichte modus, donkere modus, of volg de standaardinstelling van je apparaat.
+    Lichte modus, donkere modus, of volg de standaardinstelling van je apparaat
   </li>
   <li data-setting="placeholders">Volgende tegelposities tonen</li>
   <li data-setting="hints">Geldige posities tonen</li>
