--- a/i18n/settings/en.html
+++ b/i18n/settings/en.html
@@ -14,8 +14,9 @@
 
 <h3>Settings</h3>
 <ul class="options">
+  <li data-setting="language">Language</li>
   <li data-setting="color-scheme">
-    Light mode, dark&nbsp;mode,<br />or follow your device.
+    Light mode, dark&nbsp;mode,<br />or follow your device
   </li>
   <li data-setting="placeholders">Show placeholder tiles</li>
   <li data-setting="hints">Highlight valid positions</li>
