Update translations from Weblate.

--- a/i18n/nl/settings.html
+++ b/i18n/nl/settings.html
@@ -1,13 +1,11 @@
 <h3>Hoe speel je het spel?</h3>
 <ul>
   <li>
-    Sleep een tegel van de stapel naar het bord.<br />
-    Klik op een tegel om hem te draaien.
+    Sleep een tegel van de stapel naar het bord. Klik op een tegel om hem te draaien.
   </li>
   <li>Zorg dat de kleuren aansluiten bij de andere tegels.</li>
   <li>
-    Maak een gesloten vorm van één kleur om punten te verdienen. Hoe groter de
-    vorm, hoe meer punten je krijgt.
+    Maak een gesloten vorm van één kleur om punten te verdienen. Hoe groter de vorm, hoe meer punten je krijgt.
   </li>
 </ul>
 <p>Het spel is klaar zodra je alle tegels hebt gelegd.</p>
@@ -26,41 +24,27 @@
 
 <h3>Zin in een uitdaging?</h3>
 <p>
-  Heb je de driehoeken en vierkanten al geprobeerd? Probeer dan eens de andere
-  vormen en tegelpatronen in een
-  <a data-internal="setup" href="#setup">aangepast spel</a>.
+  Heb je de driehoeken en vierkanten al geprobeerd? Probeer dan eens de andere vormen en tegelpatronen in een <a data-internal="setup" href="#setup">aangepast spel</a>.
 </p>
 <p>
-  Je kunt zelfs de regels aanpassen: laat kleuren bijvoorbeeld juist niet
-  overeenkomen, of gebruik alleen tegels met unieke kleuren.
+  Je kunt zelfs de regels aanpassen: laat kleuren bijvoorbeeld juist niet overeenkomen, of gebruik alleen tegels met unieke kleuren.
 </p>
 <p>
-  Let op: sommige combinaties zijn onmogelijk te leggen! Het spel waarschuwt je
-  als dat gebeurt.
+  Let op: sommige combinaties zijn onmogelijk te leggen! Het spel waarschuwt je als dat gebeurt.
 </p>
 
 <h3>Over het spel</h3>
 <p>
-  Tessel is een spel van
-  <a href="https://www.vantulder.net/">Gijs van Tulder</a>.
+  Tessel is een spel van <a href="https://www.vantulder.net/">Gijs van Tulder</a>.
 </p>
 <p>Vind je het spel leuk of heb je een idee of suggestie?</p>
 <p>
-  <a href="mailto:tessel-play@vantulder.eu?subject=Tessel%20feedback"
-    >Stuur me een e-mail</a
-  >
-  of
-  <a href="https://github.com/gvtulder/tessel/issues"
-    >laat iets van je horen op GitHub</a
-  >.
+  <a href="mailto:tessel-play@vantulder.eu?subject=Tessel%20feedback">Stuur me een e-mail</a> of <a href="https://github.com/gvtulder/tessel/issues">laat iets van je horen op GitHub</a>.
 </p>
 
 <h3>Open source</h3>
 <p>
-  De <a href="https://tessel.vantulder.net/source/">broncode</a> van dit spel is
-  beschikbaar onder de GPL 3.0-licentie. Bekijk de
-  <a href="https://github.com/gvtulder/tessel/">repository op GitHub</a>
-  voor issues and pull requests.
+  De <a href="https://tessel.vantulder.net/source/">broncode</a> van dit spel is beschikbaar onder de GPL 3.0-licentie. Bekijk de <a href="https://github.com/gvtulder/tessel/">repository op GitHub</a> voor issues and pull requests.
 </p>
 
 <p class="version-line">Versie VERSION.</p>
