--- a/i18n/zh-Hant/settings.html
+++ b/i18n/zh-Hant/settings.html
@@ -39,16 +39,12 @@
 </p>
 <p>喜歡這款遊戲或有想法要分享嗎？</p>
 <p>
-  <a href="mailto:tessel-play@vantulder.eu?subject=Tessel%20feedback"
-    >給我發一份電子郵件</a
-    >或<a href="https://github.com/gvtulder/tessel/issues">在 GitHub 上告訴我</a>。
+  <a href="mailto:tessel-play@vantulder.eu?subject=Tessel%20feedback">給我發一份電子郵件</a>或<a href="https://github.com/gvtulder/tessel/issues">在 GitHub 上告訴我</a>。
 </p>
 
 <h3>開源</h3>
 <p>
-  此遊戲的<a href="https://tessel.vantulder.net/source/">源碼</a
-    >是根據 GPL 3.0 許可證提供的。請參閱<a href="https://github.com/gvtulder/tessel/"
-    >GitHub 上的代碼庫</a>以提交issue和拉取請求。
+  此遊戲的<a href="https://tessel.vantulder.net/source/">源碼</a>是根據 GPL 3.0 許可證提供的。請參閱<a href="https://github.com/gvtulder/tessel/">GitHub 上的代碼庫</a>以提交issue和拉取請求。
 </p>
 
 <p class="version-line">版本 VERSION.</p>
