Add link to iOS App Store.

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@ https://tessel.vantulder.net/source/
       content="user-scalable=no, maximum-scale=1, minimum-scale=1, viewport-fit=cover, width=device-width"
     />
     <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-itunes-app" content="app-id=6754282700" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <link rel="canonical" href="https://tessel.vantulder.net/" />
