Use full Barlow font for better language support.

--- a/src/index.html
+++ b/src/index.html
@@ -150,9 +150,9 @@ https://tessel.vantulder.net/source/
     />
     <link
       rel="preload"
-      href="../assets/fonts/barlow-latin-400.woff"
+      href="../assets/fonts/Barlow-Regular.woff2"
       as="font"
-      type="font/woff"
+      type="font/woff2"
       crossorigin="anonymous"
     />
   </head>
