--- a/i18n/tr/settings.html
+++ b/i18n/tr/settings.html
@@ -47,4 +47,4 @@
   Bu oyunun <a href="https://tessel.vantulder.net/source/">kaynak kodu</a> GPL 3.0 lisansı kapsamında sunulur. Sorunlar ve çekme istekleri için <a href="https://github.com/gvtulder/tessel/">GitHub'taki depoya</a> bak.
 </p>
 
-<p class="version-line">Sürüm VERSİYON.</p>
+<p class="version-line">Sürüm VERSION.</p>
