Standardize translation placeholders.

--- a/i18n/en/about.html
+++ b/i18n/en/about.html
@@ -12,7 +12,7 @@
 
 <h3>Up for a challenge?</h3>
 <p>
-  Played the triangles and squares? Try some of the other shapes and tiling patterns in a <a data-internal="setup" href="#setup">custom game</a>.
+  Played the triangles and squares? Try some of the other shapes and tiling patterns in a <a href="{setup}">custom game</a>.
 </p>
 <p>
   Want to mix things up? Change the rules; require that colors should not match, or use only tiles with unique colors.
