Update Weblate translations.

--- a/i18n/es/about.html
+++ b/i18n/es/about.html
@@ -12,7 +12,7 @@
 
 <h3>¿Aceptas el desafío?</h3>
 <p>
-  ¿Ya jugaste con los triángulos y cuadrados? Prueba alguna de las otras formas y patrones en un <a data-internal="setup" href="#setup">juego personalizado</a>.
+  ¿Ya jugaste con los triángulos y cuadrados? Prueba alguna de las otras formas y patrones en un <a href="{setup}">juego personalizado</a>.
 </p>
 <p>
   ¿Quieres animar las cosas? Cambia las reglas; requiere que los colores no coincidan, o usa sólo piezas con colores únicos.
@@ -20,19 +20,3 @@
 <p>
   Nota: ¡Algunas combinaciones pueden hacer imposible hacer un mosaico válido! El juego te avisará si eso sucede.
 </p>
-
-<h3>Sobre el juego</h3>
-<p>
-  Tessel es un juego creado por <a href="https://www.vantulder.net/">Gijs van Tulder</a>.
-</p>
-<p>¿Estás disfrutando del juego o tienes alguna idea que compartir?</p>
-<p>
-  <a href="mailto:tessel-play@vantulder.eu?subject=Tessel%20feedback">Envíame un email</a> o <a href="https://github.com/gvtulder/tessel/issues">dímelo en GitHub</a>.
-</p>
-
-<h3>Código abierto</h3>
-<p>
-  El <a href="https://tessel.vantulder.net/source/">código fuente</a> de este juego está disponible bajo la licencia GPL 3.0. Vea el <a href="https://github.com/gvtulder/tessel/">repositorio en GitHub</a> para reportar problemas o contribuir código.
-</p>
-
-<p class="version-line">Versión VERSION.</p>
