--- a/i18n/zh-Hant/about.html
+++ b/i18n/zh-Hant/about.html
@@ -12,7 +12,7 @@
 
 <h3>想好接受挑戰了嗎？</h3>
 <p>
-  玩過三角形和正方形了嗎？試試其他的形狀和鑲嵌模式，在<a data-internal="setup" href="#setup">自定義遊戲</a>中體驗一下。
+  玩過三角形和正方形了嗎？試試其他的形狀和鑲嵌模式，在<a href="{setup}">自定義遊戲</a>中體驗一下。
 </p>
 <p>
   想嘗試新花樣？改變規則，要求相鄰原塊顏色相異，或是僅僅使用特定顏色組合的原塊。
@@ -20,19 +20,3 @@
 <p>
   注意：在某些規則組合下，平面密鋪可能無解！此等情況發生時，遊戲會提醒您。
 </p>
-
-<h3>關於此遊戲</h3>
-<p>
-  Tessel 是一款由 <a href="https://www.vantulder.net/">Gijs van Tulder</a> 製作的遊戲。
-</p>
-<p>喜歡這款遊戲或有想法要分享嗎？</p>
-<p>
-  <a href="mailto:tessel-play@vantulder.eu?subject=Tessel%20feedback">給我發一份電子郵件</a>或<a href="https://github.com/gvtulder/tessel/issues">在 GitHub 上告訴我</a>。
-</p>
-
-<h3>開源</h3>
-<p>
-  此遊戲的<a href="https://tessel.vantulder.net/source/">源碼</a>是根據 GPL 3.0 許可證提供的。請參閱<a href="https://github.com/gvtulder/tessel/">GitHub 上的代碼庫</a>以提交issue和拉取請求。
-</p>
-
-<p class="version-line">版本 VERSION.</p>
