--- a/i18n/hu/about.html
+++ b/i18n/hu/about.html
@@ -12,7 +12,7 @@
 
 <h3>Up for a challenge?</h3>
 <p>
-  Played the triangles and squares? Try some of the other shapes and tiling patterns in a <a data-internal="setup" href="#setup">custom game</a>.
+  Played the triangles and squares? Try some of the other shapes and tiling patterns in a <a href="{setup}">custom game</a>.
 </p>
 <p>
   Want to mix things up? Change the rules; require that colors should not match, or use only tiles with unique colors.
@@ -20,19 +20,3 @@
 <p>
   Note: some combinations may make it impossible to make a valid tiling! The game will warn you if that happens.
 </p>
-
-<h3>About the game</h3>
-<p>
-  Tessel is a game by <a href="https://www.vantulder.net/">Gijs van Tulder</a>.
-</p>
-<p>Enjoying the game or have an idea to share?</p>
-<p>
-  <a href="mailto:tessel-play@vantulder.eu?subject=Tessel%20feedback">Send me an email</a> or <a href="https://github.com/gvtulder/tessel/issues">tell me on GitHub</a>.
-</p>
-
-<h3>Open source</h3>
-<p>
-  The <a href="https://tessel.vantulder.net/source/">source code</a> for this game is available under the GPL 3.0 license. See the <a href="https://github.com/gvtulder/tessel/">repository on GitHub</a> for issues and pull requests.
-</p>
-
-<p class="version-line">Version VERSION.</p>
