--- a/i18n/tr/about.html
+++ b/i18n/tr/about.html
@@ -12,7 +12,7 @@
 
 <h3>Bir meydan okumaya hazır mısın?</h3>
 <p>
-  Üçgenler ve karelerle oynadın mı? <a data-internal="setup" href="#setup">Özel oyunda</a> diğer şekillerden ve döşeme desenlerinden bazılarını dene.
+  Üçgenler ve karelerle oynadın mı? <a href="{setup}">Özel oyunda</a> diğer şekillerden ve döşeme desenlerinden bazılarını dene.
 </p>
 <p>
   Biraz çeşitlilik mi istiyorsun? Kuralları değiştir; renklerin eşleşmemesi gerektiğini söyle veya yalnızca benzersiz renklere sahip taşları kullan.
@@ -20,19 +20,3 @@
 <p>
   Not: Bazı kombinasyonlar geçerli bir döşeme yapmayı imkansız hale getirebilir! Böyle bir durumda oyun seni uyarır.
 </p>
-
-<h3>Oyun hakkında</h3>
-<p>
-  Tessel, <a href="https://www.vantulder.net/">Gijs van Tulder</a>'ın bir oyunudur.
-</p>
-<p>Oyunun tadını çıkar. Paylaşacak bir fikrin mi var?</p>
-<p>
-  <a href="mailto:tessel-play@vantulder.eu?subject=Tessel%20feedback">e-Posta gönder</a> veya <a href="https://github.com/gvtulder/tessel/issues">GitHub üzerinden ilet</a>.
-</p>
-
-<h3>Özgür yazılım</h3>
-<p>
-  Bu oyunun <a href="https://tessel.vantulder.net/source/">kaynak kodu</a> GPL 3.0 lisansı kapsamında sunulur. Sorunlar ve çekme istekleri için <a href="https://github.com/gvtulder/tessel/">GitHub'taki depoya</a> bak.
-</p>
-
-<p class="version-line">Sürüm VERSION.</p>
