Update Spanish translation through Weblate.
Co-authored-by: anauta <treschavales@gmail.com>

--- a/i18n/es/about.html
+++ b/i18n/es/about.html
@@ -1,7 +1,7 @@
 <h3>¿Cómo jugar?</h3>
 <ul>
   <li>
-    Arrastre una tesela de la pila para colocarla en el tablero. Haga clic en una tesela para girarla.
+    Arrastra una tesela de la pila para colocarla en el tablero. Haz clic en una tesela para girarla.
   </li>
   <li>Empareja los colores con las fichas que se tocan.</li>
   <li>
