Add German translation.

--- a/i18n/de/about.html
+++ b/i18n/de/about.html
@@ -1,22 +1,22 @@
-<h3>How to play?</h3>
+<h3>Spielregeln</h3>
 <ul>
   <li>
-    Drag a tile from the stack to place it on the board. Click on a tile to rotate it.
+    Ziehe eine Kachel aus dem Deck auf das Spielbrett. Tippe auf die Kachel im Deck, um sie zu drehen.
   </li>
-  <li>Match the colors with the tiles next to it.</li>
+  <li>Lege die Kachel so, dass die Farben mit den umliegenden Kacheln zusammenpassen.</li>
   <li>
-    Complete a closed shape of one color to earn points. The bigger the shape, the higher the points.
+    Schließe eine Farbfläche ab, um Punkte zu sammeln. Je größer die Fläche, desto höher die Punktzahl.
   </li>
 </ul>
-<p>The game ends when you have placed all your tiles.</p>
+<p>Das Spiel ist beendet, wenn alle Kacheln gelegt wurden.</p>
 
-<h3>Up for a challenge?</h3>
+<h3>Bereit für eine Herausforderung?</h3>
 <p>
-  Played the triangles and squares? Try some of the other shapes and tiling patterns in a <a href="{setup}">custom game</a>.
+  Fertig mit den Dreiecken und Quadraten? Probiere auch andere Formen und Kachelmuster in einem <a href="{setup}">benutzerdefinierten Spiel</a>.
 </p>
 <p>
-  Want to mix things up? Change the rules; require that colors should not match, or use only tiles with unique colors.
+  Du kannst für Abwechslung sorgen, indem du die Regeln änderst. Zum Beispiel, dass benachbarte Farben nicht übereinstimmen dürfen oder dass nur einfarbige Kacheln verwendet werden.
 </p>
 <p>
-  Note: some combinations may make it impossible to make a valid tiling! The game will warn you if that happens.
+  Beachte: manche Kombinationen machen eventuell ein Kachelmuster unmöglich! Das Spiel wird dich in diesem Fall warnen.
 </p>
