Update dependencies: typescript-eslint, prettier, ts-jest, tsx, lingui.

--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,10 @@ https://tessel.vantulder.net/source/
       rel="preload"
       href="../style/main.scss"
       as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
+      onload="
+        this.onload = null;
+        this.rel = 'stylesheet';
+      "
       crossorigin="anonymous"
     />
     <link
