Update zh-Hans translation.
Co-authored-by: Monstorix <monstorix@outlook.com>

--- a/i18n/zh-Hans/about.html
+++ b/i18n/zh-Hans/about.html
@@ -12,7 +12,7 @@
 
 <h3>准备好接受挑战了吗？</h3>
 <p>
-  已经玩过三角形和矩形镶嵌了？到<a href="{setup}">自定义游戏</a>页面试试其他的形状和镶嵌模式吧。
+  已经玩过三角形和正方形镶嵌了？到<a href="{setup}">自定义游戏</a>页面试试其他的形状和镶嵌模式吧。
 </p>
 <p>
   想要试试与众不同的花样？您可以随时改变规则，例如要求相邻的铺砖颜色不同，或是只使用包含独特而非相连颜色组合的铺砖。
