--- a/src/index.capacitor.html
+++ b/src/index.capacitor.html
@@ -3,7 +3,7 @@
 Tessel - A tile game
 Copyright (c) 2025 Gijs van Tulder
 Source available under a GPL-3.0 license, see
-https://tessel.vantulder.net/source/
+https://play.tessel.at/source/
 -->
 <html>
   <head>
@@ -15,7 +15,7 @@ https://tessel.vantulder.net/source/
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <link rel="canonical" href="https://tessel.vantulder.net/" />
+    <link rel="canonical" href="https://play.tessel.at/" />
     <title>Tessel – A tile game</title>
     <style type="text/css">
       /* minimum css for splash screen */
