--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 Tessel - A tile game
 Copyright (c) 2025 Gijs van Tulder
 Source available under a GPL-3.0 license, see
-https://tessel.vantulder.net/source/
+https://play.tessel.at/source/
 -->
 <html>
   <head>
@@ -23,17 +23,17 @@ https://tessel.vantulder.net/source/
     <meta name="apple-itunes-app" content="app-id=6754282700" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <link rel="canonical" href="https://tessel.vantulder.net/" />
+    <link rel="canonical" href="https://play.tessel.at/" />
     <meta property="og:title" content="Tessel – A tile game" />
     <meta
       property="og:description"
       content="A free online tile game. Place tiles with matching colors to make shapes and fill the board."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tessel.vantulder.net/" />
+    <meta property="og:url" content="https://play.tessel.at/" />
     <meta
       property="og:image"
-      content="https://tessel.vantulder.net/social/tessel-1200x630.png"
+      content="https://play.tessel.at/social/tessel-1200x630.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -44,7 +44,7 @@ https://tessel.vantulder.net/source/
     />
     <meta
       property="og:image"
-      content="https://tessel.vantulder.net/social/tessel-1200x1200.png"
+      content="https://play.tessel.at/social/tessel-1200x1200.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="1200" />
@@ -54,8 +54,8 @@ https://tessel.vantulder.net/source/
       content="Screenshots of Tessel – A tile game."
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="tessel.vantulder.net" />
-    <meta property="twitter:url" content="https://tessel.vantulder.net/" />
+    <meta property="twitter:domain" content="play.tessel.at" />
+    <meta property="twitter:url" content="https://play.tessel.at/" />
     <meta name="twitter:title" content="Tessel – A tile game" />
     <meta
       property="twitter:description"
@@ -63,7 +63,7 @@ https://tessel.vantulder.net/source/
     />
     <meta
       name="twitter:image"
-      content="https://tessel.vantulder.net/social/tessel-1200x630.png"
+      content="https://play.tessel.at/social/tessel-1200x630.png"
     />
     <title>Tessel – A tile game</title>
     <style type="text/css">
@@ -188,8 +188,8 @@ https://tessel.vantulder.net/source/
       <p class="splash-footer">
         A game by <a href="https://www.vantulder.net/">Gijs van Tulder.</a>
         <br />
-        View <a href="https://tessel.vantulder.net/source/">source code</a> and
-        <a href="https://tessel.vantulder.net/about/">documentation</a>.
+        View <a href="https://play.tessel.at/source/">source code</a> and
+        <a href="https://play.tessel.at/about/">documentation</a>.
       </p>
     </div>
     <script type="module" src="main.browser.ts"></script>
