New language pt-BR: Brazilian Portuguese/Português brasileiro (by Tekhnikal).
Co-authored-by: Tekhnikal <weblate.actress542@simplelogin.com>

--- a/i18n/pt-BR/about.html
+++ b/i18n/pt-BR/about.html
@@ -5,18 +5,18 @@
   </li>
   <li>Combine as cores com as peças ao lado.</li>
   <li>
-    Complete a closed shape of one color to earn points. The bigger the shape, the higher the points.
+    Complete uma figura fechada de uma cor para ganhar pontos. Quanto maior a figura, maior a pontuação.
   </li>
 </ul>
-<p>The game ends when you have placed all your tiles.</p>
+<p>O jogo termina quando você tiver colocado todas as suas peças.</p>
 
-<h3>Up for a challenge?</h3>
+<h3>Topa um desafio?</h3>
 <p>
-  Played the triangles and squares? Try some of the other shapes and tiling patterns in a <a href="{setup}">custom game</a>.
+  Já jogou com triângulos e quadrados? Experimente algumas das outras formas e padrões de mosaico em um <a href="{setup}">jogo personalizado</a>.
 </p>
 <p>
-  Want to mix things up? Change the rules; require that colors should not match, or use only tiles with unique colors.
+  Quer dar um toque diferente? Mude as regras; exija que as cores não combinem ou use apenas peças com cores únicas.
 </p>
 <p>
-  Note: some combinations may make it impossible to make a valid tiling! The game will warn you if that happens.
+  Observação: algumas combinações podem impossibilitar a criação de um mosaico válido! O jogo irá avisá-lo caso isso aconteça.
 </p>
